# rumiai

./: .gitignore
rumi_ai_1_10/: .gitignore  DEPLOYMENT_NOTES.md  README.md  TODO.md  agent_runtime.py  ai_manager.py  app.py  chat_manager.py  create_dockerfile.py  create_kernel.py  deploy.py  deploy_report_20260213_224509.json  erroer_memo.txt  file_manager.py  message_handler.py  relationship_manager.py  requirements-dev.txt  requirements.txt  settings_manager.py  setup.bat  setup.sh  tool_api.py  tool_ui_manager.py  zissou.txt  zissousurukoto.txt
rumi_ai_1_10/ai_client/: ai_client_loader.py
rumi_ai_1_10/bootstrap/: 00_env_check.py  README.md
rumi_ai_1_10/chats/: relationships.json
rumi_ai_1_10/core_runtime/: __init__.py  app_lifecycle_manager.py  approval_manager.py  audit_logger.py  capability_executor.py  capability_grant_manager.py  capability_handler_registry.py  capability_installer.py  capability_models.py  capability_proxy.py  capability_trust_store.py  capability_usage_store.py  component_lifecycle.py  container_orchestrator.py  crypto_utils.py  dependency_resolver.py  deprecation.py  di_container.py  diagnostics.py  docker_capability.py  docker_run_builder.py  egress_domain_controller.py  egress_ip.py  egress_protocol.py  egress_proxy.py  (+60 more)
rumi_launcher/: Cargo.toml  README.md  build.rs
rumi_launcher/assets/: README.md
rumi_launcher/src/: config.rs  health_check.rs  kernel_manager.rs  main.rs  python_env.rs  updater.rs
tenpu/: audit_logger.py  capability_grant_manager.py  network_grant_manager.py  paths.py  pip_installer.py  rumi_syscall.py
(+561 files in other folders)
